<resources>
    <string name="app_name">Розклад занять ФІТУ</string>
    <string name="riven">Оберіть Ваш рівень</string>
    <string name="specialnist">Оберіть Вашу спеціальність</string>
    <string name="f_cr">1 курс</string>
    <string name="s_cr">2 курс</string>
    <string name="t_cr">3 курс</string>
    <string name="fo_cr">4 курс</string>
    <string name="fif_cr">5 курс</string>
    <string name="six_cr">6 курс</string>
    <string name="svn_cr">7 курс</string>


    <string name="infor">Інформатика</string>
    <string name="s_infor">Соціальна інформатика</string>
    <string name="menedj">Менеджмент</string>
    <string name="matem">Математика</string>
    <string name="finans">Фінанси і кредит</string>
    <string name="dy">Державне управління</string>


    <string name="poned">Понеділок</string>

    <string name="days"> Оберіть день</string>
    <string name="vivtorok">Вівторок</string>
    <string name="sreda">Середа</string>
    <string name="chetverg">Четвер</string>
    <string name="pyatnica">Пятниця</string>
    <string name="subt">Субота</string>
    <string name="sun">Нд</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="f_g">1 група</string>
    <string name="s_g">2 група</string>
    <string name="title_activity_f__inf">F_Inf</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
