<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView14" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_alignBottom="@+id/imageView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView15" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poned"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView15"
        android:layout_centerHorizontal="true"
        android:id="@+id/pnd" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/pnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView16" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vivtorok"
        android:id="@+id/vtr"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_below="@+id/imageView16"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/imageView17"
        android:layout_alignBottom="@+id/vtr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sreda"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView17"
        android:layout_centerHorizontal="true"
        android:id="@+id/srd" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/srd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView18" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chetverg"
        android:id="@+id/cht"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView18"
        android:layout_alignLeft="@+id/srd"
        android:layout_alignStart="@+id/srd" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/cht"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView19" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ptn"
        android:text="@string/pyatnica"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_below="@+id/imageView19"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/ptn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView20" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbt"
        android:text="@string/subt"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView20"
        android:layout_alignLeft="@+id/cht"
        android:layout_alignStart="@+id/cht" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/sbt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>