<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_bach"
        android:text="@string/specialnist"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_spec"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/txt_bach"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView2" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_below="@+id/txt_bach"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView3" />
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/line"
       android:layout_below="@+id/imageView3"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:id="@+id/imageView7" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inf_m"
        android:text="@string/infor"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_alignTop="@+id/imageView7"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/inf_m"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_infor"
        android:textColor="@color/text_color"
        android:id="@+id/soc_inf"
        android:textSize="@dimen/txt_spec"
        android:layout_below="@+id/imageView8"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/soc_inf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView9" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menedj"
        android:id="@+id/menedjer_m"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_below="@+id/imageView9"
        android:layout_alignRight="@+id/inf_m"
        android:layout_alignEnd="@+id/inf_m" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/menedjer_m"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView10" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matem_m"
        android:text="@string/matem"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_below="@+id/imageView10"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/matem_m"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView11" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finans_credit"
        android:text="@string/finans"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView11"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@id/finans_credit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView12" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dy_m"
        android:text="@string/dy"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView12"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/dy_m"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView13" />


</RelativeLayout>