<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/line"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/first_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_cr"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/txt_cr"
        android:textColor="@color/red_co"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/line2"
        android:layout_below="@+id/first_cr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/second_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_cr"
        android:textSize="@dimen/txt_cr"
        android:textColor="@color/trees"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/line3"
        android:layout_below="@+id/second_cr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/third_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_cr"
        android:textSize="@dimen/txt_cr"
        android:textColor="@color/blue"
        android:layout_below="@+id/line3"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/line4"
        android:layout_below="@+id/third_cr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/fo_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fo_cr"
        android:textSize="@dimen/txt_cr"
        android:textColor="@color/red"
        android:layout_below="@+id/line4"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:id="@+id/line5"
        android:layout_below="@+id/fo_cr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>