<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/srd"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:text="@string/sreda"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_alignBottom="@+id/srd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/numbers"
        android:layout_below="@+id/imageView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/text_color"
        android:layout_marginLeft="10dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upline"
        android:layout_toEndOf="@+id/numbers"
        android:layout_alignTop="@+id/numbers"
        android:layout_toRightOf="@+id/numbers" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/names_p"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView22"
        android:layout_toRightOf="@+id/numbers"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView37"
        android:src="@drawable/upline"
        android:layout_alignTop="@+id/names_p"
        android:layout_toLeftOf="@+id/srd"
        android:layout_toStartOf="@+id/srd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/name_2"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView22"
        android:layout_toRightOf="@+id/imageView37"
        android:layout_toEndOf="@+id/imageView37" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView38"
        android:layout_toEndOf="@+id/name_2"
        android:src="@drawable/upline"
        android:layout_alignTop="@+id/names_p"
        android:layout_toRightOf="@+id/name_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/names_p"
        android:layout_toRightOf="@+id/imageView38"
        android:layout_toEndOf="@+id/imageView38"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/f_g"
        android:id="@+id/textView10"
        android:layout_above="@+id/imageView22"
        android:layout_alignLeft="@+id/numbers"
        android:layout_alignStart="@+id/numbers"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s_g"
        android:id="@+id/textView11"
        android:textColor="@color/red"
        android:layout_above="@+id/imageView22"
        android:layout_alignRight="@+id/names_p"
        android:layout_alignEnd="@+id/names_p" />


</RelativeLayout>