<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chetverg"
        android:text="@string/chetverg"
        android:textSize="@dimen/txt_menu_size"
        android:textColor="@color/text_color"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/chetverg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/numbers"
        android:layout_below="@+id/imageView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/text_color"
        android:layout_marginLeft="10dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upline"
        android:layout_alignTop="@+id/imageView23"
        android:layout_toRightOf="@+id/numbers"
        android:id="@+id/imageView29"
        android:layout_toEndOf="@+id/numbers"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/names_p"
        android:layout_below="@+id/imageView23"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/text_color"
        android:layout_alignBottom="@+id/numbers"
        android:layout_toRightOf="@+id/imageView29"
        android:layout_toEndOf="@+id/imageView29"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView41"
        android:layout_below="@+id/chetverg"
        android:layout_alignLeft="@+id/chetverg"
        android:layout_alignStart="@+id/chetverg"
        android:src="@drawable/upline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/name_2"
        android:textColor="@color/text_color"
        android:layout_below="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView41"
        android:layout_toEndOf="@+id/imageView41" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView42"
        android:src="@drawable/upline"
        android:layout_toEndOf="@+id/name_2"
        android:layout_alignTop="@+id/imageView23"
        android:layout_toRightOf="@+id/name_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/name_para_2"
        android:layout_below="@+id/imageView23"
        android:layout_toRightOf="@+id/imageView42"
        android:layout_toEndOf="@+id/imageView42"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/f_g"
        android:id="@+id/textView12"
        android:textColor="@color/red"
        android:layout_above="@+id/imageView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s_g"
        android:id="@+id/textView13"
        android:textColor="@color/red"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignRight="@+id/names_p"
        android:layout_alignEnd="@+id/names_p" />

</RelativeLayout>