<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poned"
        android:textColor="@color/text_color"
        android:textSize="@dimen/txt_menu_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/numbers"
        android:layout_below="@+id/imageView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/txt_days"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_color"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upline"
        android:layout_toEndOf="@+id/numbers"
        android:layout_alignTop="@+id/imageView21"
        android:layout_toRightOf="@+id/numbers"
        android:id="@+id/imageView25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/names_p"
        android:textSize="@dimen/txt_days"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView21"
        android:layout_toRightOf="@+id/numbers"
        android:layout_toEndOf="@+id/numbers"
        android:layout_alignBottom="@+id/numbers"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_color"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView39"
        android:src="@drawable/upline"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/name_2"
        android:layout_below="@+id/imageView21"
        android:layout_toRightOf="@+id/imageView39"
        android:layout_toEndOf="@+id/imageView39"
        android:textColor="@color/text_color" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView40"
        android:src="@drawable/upline"
        android:layout_alignTop="@+id/names_p"
        android:layout_toRightOf="@+id/name_2"
        android:layout_toEndOf="@+id/name_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/name_para_2"
        android:layout_alignTop="@+id/names_p"
        android:layout_toRightOf="@+id/imageView40"
        android:layout_toEndOf="@+id/imageView40"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/f_g"
        android:id="@+id/textView14"
        android:layout_above="@+id/imageView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s_g"
        android:id="@+id/textView15"
        android:textColor="@color/red"
        android:layout_above="@+id/imageView21"
        android:layout_alignRight="@+id/names_p"
        android:layout_alignEnd="@+id/names_p" />


</RelativeLayout>